[package]
name = "dispel-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
image = "0.24.6"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
