[workspace]
members = [".", "dispel-gui"]
resolver = "2"

[workspace.dependencies]
iced_test = "0.14.0"

[workspace.metadata]
features = ["iced_test"]

[lib]
name = "dispel_core"
path = "src/lib.rs"

[package]
name = "dispel-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
image = "0.24.7"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
clap = { version = "4.4.10", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.39.0"
features = ["bundled"]

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
