[package]
name = "dispel-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "wgpu", "image", "canvas"] }
image = { version = "0.25", features = ["png", "jpeg"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros"] }
rfd = "0.14.1"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
dispel_core = { package = "dispel-extractor", path = ".." }
nucleo-matcher = "0.3"

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
