[package]
name = "dispel-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", default-features = false, features = ["tokio", "wgpu", "image", "canvas", "advanced", "lazy"] }
image = { version = "0.25", features = ["png", "jpeg"] }
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "fs", "sync"] }
rfd = "0.17.2"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "6.0.0"
dispel_core = { package = "dispel-extractor", path = ".." }
nucleo-matcher = "0.3"
bincode = "1.3.3"
thiserror = "2.0.18"
tempfile = "3.10.0"
iced_test = { version = "0.14.0", optional = true }
env_logger = "0.10.0"
rodio = { version = "0.21", default-features = false, features = ["wav", "playback"] }
log = "0.4"
zip = "2"

[features]
default = []
iced_test = ["dep:iced_test"]
tokio = []

[dependencies.rusqlite]
version = "0.39.0"
features = ["bundled"]

[dev-dependencies]
proptest = "1.4"
syn = { version = "2", features = ["full"] }
